# BTYPE

./: AUTHORS  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  RichTypesInfo.xsd
src/: CMakeLists.txt  btype.cpp  btype.h  btype_factory.cpp  btype_fmt.h  btype_xml_reader.cpp  btype_xml_writer.cpp
tests/: CMakeLists.txt  btype_formatter_tests.cpp  btype_index_tests.cpp  btype_tests.cpp  btype_xml_reader_tests.cpp  btype_xml_write_tests.cpp  btype_xml_writer_tests.cpp
